[package]
name = "tiger"
version = "0.1.0"
authors = ["Joel Palmer <joelpalmer@gmail.com>"]
edition = "2018"
readme = "README.md"
repo = ""

[dependencies]
atty = "0.2.2"
ansi_term = "0.9"
bincode = "1.0"
console = "0.6"
git2 = "0.6"
error-chain = "0.11"
directories = "0.9"
lazy_static = "1.0"

[dependencies.syntect]
version = "2"
default-features = false
features = ["parsing", "yaml-load", "dump-load", "dump-create"]

[dependencies.clap]
version = "2"
default-features = false
features = ["suggestions", "color", "wrap_help"]
